--- a/portfolio_update_v1/styles.css
+++ b/portfolio_update_v1/styles.css
@@ -1,8 +1,8 @@
 /* Global Layout Set-up */
-* { 
+* {
   box-sizing: border-box;
 }
-  
+
 body {
   margin: 0;
   padding: 0;
@@ -18,6 +18,10 @@ a {
   color: #999;
 }
 a:hover {
+  color: #6633ff;
+}
+
+a .selected {
   color: #6633ff;
 }
 
@@ -57,7 +61,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/materialdesign.png') no-repeat center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
@@ -70,11 +74,11 @@ header .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.1);
+  box-shadow: 10px 10px 5px black;
 }
 .tag {
   background-color: #efefef;
@@ -83,7 +87,7 @@ header .profile-image:hover {
   border-radius: 5px;
   display: table;
   margin: 10px auto;
-} 
+}
 .location {
   background-color: #222;
   color: yellow;
@@ -151,9 +155,6 @@ a.social {
   opacity: .4;
   transition: all .5s;
 }
-a.twitter {
-  background-image: url(images/twitter.svg);
-}
 a.linkedin {
   background-image: url(images/linkedin.svg);
 }
@@ -169,10 +170,10 @@ a.social:hover {
 
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
-  
+
   .flex {
       display: -ms-flexbox;      /* TWEENER - IE 10 */
-      display: flex; 
+      display: flex;
       max-width: 1200px;
       -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -204,4 +205,3 @@ a.social:hover {
   }
 
 }
-
