Final edits for extra credit
Corrected some spelling errors, made changes to css properties, added
download image, document, and link for .pdf resume

--- a/portfolio_update_v1/styles.css
+++ b/portfolio_update_v1/styles.css
@@ -103,7 +103,7 @@ header .profile-image:hover {
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #5ba8c6;
 }
 
 ul.skills {
@@ -155,6 +155,11 @@ a.social {
   opacity: .4;
   transition: all .5s;
 }
+
+a.download {
+  background-image: url(images/downloadlrg.png);
+}
+
 a.linkedin {
   background-image: url(images/linkedin.svg);
 }
